--- a/portfolio.css
+++ b/portfolio.css
@@ -54,39 +54,63 @@ nav a:hover {
   font-weight: 700;
 }
 
-.hero-text h1 span {
-  background: linear-gradient(90deg, #4facfe, #6a8dff);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+.hero-text h1 {
+  animation: slideInLeft 1s ease-out forwards;
+  opacity: 0;
 }
 
 .hero-text h2 {
-  font-size: 22px;
-  font-weight: 600;
-  margin: 10px 0;
+  animation: slideInLeft 1s ease-out forwards;
+  animation-delay: 0.3s;
+  opacity: 0;
+}
+
+
+/* Animation for sliding in */
+@keyframes slideInLeft {
+  0% {
+    transform: translateX(-100px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
 }
 
 .hero-text p {
-  font-size: 16px;
-  max-width: 400px;
-  color: #ccc;
+  animation: slideInLeft 1s ease-out forwards;
+  animation-delay: 0.5s; /* delay for smooth effect */
+  opacity: 0; /* ensures hidden before animation */
 }
 
+
 .hero img {
+   animation: slideInLeft 1s ease-out forwards;
   width: 220px;
   height: 220px;
   border-radius: 50%;
   border: 4px solid #4facfe;
   box-shadow: 0px 0px 30px rgba(79, 172, 254, 0.6);
 }
+.hero img:hover {
+  width: 235px;
+  height: 235px;
+  border-radius: 50%;
+  border: 4px solid #4facfe;
+  box-shadow: 0px 0px 100px rgba(79, 172, 254, 0.6);
+}
+
+
 
 /* Social Icons */
 /* Socials Container */
 .socials {
+    animation: slideInLeft 1s ease-out forwards;
   margin-top: 20px;
   display: flex;
   gap: 15px;
-  justify-content: center;
+  /* justify-content: center; */ 
 }
 
 /* Social Icon Button */
@@ -106,9 +130,16 @@ nav a:hover {
 
 /* Social Icon Image */
 .socials a img {
-  width: 60%;  /* make icon fit inside circle */
-  height: 60%;
+  width: 65%;  /* make icon fit inside circle */
+  height: 65%;
   object-fit: contain;
+}
+.socials a img:hover {
+  width: 65%;  /* make icon fit inside circle */
+  height: 65%;
+  object-fit: contain;
+  transform: scale(1.1);
+  box-shadow: 0px 0px 20px rgba(79, 172, 254, 0.8);
 }
 
 /* Hover Effect */
@@ -121,6 +152,7 @@ nav a:hover {
 
 /* Skills Section */
 .skills {
+   animation: slideInLeft 1s ease-out forwards;
   text-align: center;
   margin: 50px 20px;
 }
@@ -240,6 +272,7 @@ nav a:hover {
 
 /* Projects Section */
 .projects {
+   animation: slideInLeft 1s ease-out forwards;
   text-align: center;
   margin: 60px 20px;
 }
@@ -351,6 +384,30 @@ nav a:hover {
 }
 
 .tic_box iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+.project1_box {
+  width: 100%;
+  height: 100%;
+  display: none; /* hidden by default */
+  border-radius: 15px;
+}
+
+.project1_box iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+.cer_box {
+  width: 100%;
+  height: 100%;
+  display: none; /* hidden by default */
+  border-radius: 15px;
+}
+
+.cer_box img{
   width: 100%;
   height: 100%;
   border: none;
