--- a/project1.css
+++ b/project1.css
@@ -1,28 +1,23 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+body{
+    margin: 0;
+    padding: 0;
+}
 
-.content {
+.content{
     width: 100%;
-    height: 100%;
-    display: none;
+    height: 100vh;
     position: relative;
     background-color: #2d2d2d;
-    border-radius: 15px;
-    overflow: hidden;
 }
-
-.content_h1{
-    height: 120px;
+.content h1{
     width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     position: absolute;
-    
-
-}
-.content_h1 h1{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    left: 30%;
+    top: 5%;
     font-size: 100px;
     color: rgb(255, 255, 255);
 
@@ -40,8 +35,8 @@
     z-index: 2;
 }
 .content .animation .can{
-   background: 
-   url(bg.png) var(--left) 0,
+    background: 
+    url(bg.png) var(--left) 0,
    url(mockup.png);
    background-size: auto 100%;
    background-blend-mode: multiply;
@@ -84,8 +79,8 @@
     z-index: 1;
  }
  .content .rock2{
-    height: 350px;
-    width: 450px;
+    height: 400px;
+    width: 500px;
     background-image: url(rock2.png);
     background-repeat: no-repeat;
     background-blend-mode: multiply;
@@ -97,14 +92,14 @@
  }
  .content .rock3{
    
-    width: 400px;
-    height: 600px;
+    width: 500px;
+    height: 700px;
     background-image: url(rock3.png);
     background-repeat: no-repeat;
     background-blend-mode: multiply;
     background-size: contain;
     position: absolute;
-    right:  -7%;
+    right: 0;
     top: 30%;
     transition: 1s;
     z-index: 0;
@@ -117,10 +112,9 @@
  .content:has(.animation:hover) .rock2{
     transition: 1s;
     bottom: -5%;
-    transform: translateX(-10%);
  }
  .content:has(.animation:hover) .rock3{
     transition: 1s;
     top: 35%;
-    right: -10%;
+    right: -5%;
  }
